...
              child: Padding(
                padding: const EdgeInsets.all(32),
                child: Text(S.of(context).playlistEmpty),
              ),
            )
          : ReorderableListView.builder(
              key: const ValueKey('player-queue-list'),
              scrollController: widget.scrollController,
              padding: const EdgeInsets.symmetric(vertical: 8),
              physics: const AlwaysScrollableScrollPhysics(
                parent: ClampingScrollPhysics(),
              ),
              itemCount: tracks.length,
...
